--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "next": "latest",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
