--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "mongodb": "^5.1.0",
     "next": "latest",
     "openai": "^3.2.1",
     "react": "^18.2.0",
